gitops/apps/shop/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: shop
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
