gitops/apps/shop/deploy.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prestashop
  labels: &default
    app: prestashop
    role: web
spec:
  replicas: 1
  selector:
    matchLabels: *default
  template:
    metadata:
      labels: *default
    spec:
      containers:
        - name: prestashop
          image: prestashop/prestashop:9.1.5
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: /var/www/html
              name: config
            - mountPath: /var/www/html/var/cache
              name: cache
      volumes:
        - name: cache
          emptyDir: {}
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: config
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: disk-hddb
        volumeMode: Filesystem
